[gd_scene load_steps=3 format=3 uid="uid://b8a1ywc2qqrjv"]

[ext_resource type="Script" path="res://cs/卡牌系统/视图/RuneCard.gd" id="1_runecard"]
[ext_resource type="Texture2D" path="res://assets/images/pokers/1.jpg" id="2_cardback"]

[node name="RuneCard" type="Control"]
custom_minimum_size = Vector2(120, 180)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_runecard")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cardback")
expand_mode = 1
stretch_mode = 5

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 30.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 66.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "符文名称"
horizontal_alignment = 1

[node name="ElementLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "元素类型"
horizontal_alignment = 1 